welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:30: error: ';' expected but ')' found.
			marqueSol(T(y + decal.toInt) % getMondeHauteur()))
                                                                         ^